# ExpProcessor

./: CMakeLists.txt  README.md  main.py  processor.py  utils.py
include/: Processor.h  Utils.h
include/ISA/: ISAOps.h  Op.h
include/Parser/: Parser.h
include/Processor/: Processor.h
include/Simulator/: Simulator.h
include/Utils/: Utils.h
lib/: CMakeLists.txt
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Simulator/: CMakeLists.txt  Simulator.cpp
lib/utils/: CMakeLists.txt  Utils.cpp
test/: CMakeLists.txt  TestEpuSimulator.cpp  run_tests.sh  test_epu.asm
tools/: CMakeLists.txt  EPUISAGenerator.cpp  TestUtils.cpp  test.dummy_asm
